# BioSci-Radar

./: .gitignore  README.md  README.zh.md  config.example.toml  pyproject.toml
data/exports/: recommendations.en.md  recommendations.zh.md
data/papers/: 2026-05-12.json
docs/: notion_schema.md  notion_schema.zh.md
src/biosci_radar/: __init__.py  cli.py  collectors.py  config.py  dashboard.py  http_client.py  markdown_export.py  models.py  notion.py  scoring.py  storage.py  summary.py  text.py
