[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biosci-radar"
version = "0.1.0"
description = "Notion-first literature radar for bioinformatics, multi-omics, and ML/DL methods."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
biosci-radar = "biosci_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
